--- a/pet_deployment.yml
+++ b/pet_deployment.yml
@@ -2,12 +2,12 @@ apiVersion: extensions/v1beta1
 kind: Deployment 
 metadata: 
   name: petapp-deployment 
-  namespace: default
 spec: 
   replicas: 2 
   template: 
     metadata: 
       labels: 
+        node: child1
     spec: 
       containers: 
       - name: petapp-deployment 
