--- a/pet_deployment.yml
+++ b/pet_deployment.yml
@@ -1,21 +1,16 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
-  name: nginx-deployment
-  labels:
-    app: nginx
+ name: pet.pod
+ namespace: default
+ labels:
 spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:1.7.9
-        ports:
-        - containerPort: 80
+  containers:
+    - name: admin
+      image: jithendramuppalla/petapplication:latest
+      ports:
+        - containerPort: 8080
+  nodeSelector:
+    node: child1
+  restartPolicy: Never
+  terminationGracePeriodSeconds: 30
